# cardamum-android

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  deny.toml  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: audit.yml  releases.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/foss/java/org/pimalaya/cardamum/billing/: BillingFactory.java
android/app/src/google/: AndroidManifest.xml
android/app/src/google/java/org/pimalaya/cardamum/billing/: BillingFactory.java  Entitlement.java  GoogleBilling.java  PaywallActivity.java  PlayVerifier.java  Purchases.java  Subscriptions.java  SupportActivity.java  SupportStore.java
android/app/src/google/res/layout/: activity_paywall.xml  activity_support.xml
android/app/src/google/res/values/: strings.xml
android/app/src/google/res/values-fr/: strings.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/pimalaya/cardamum/: AccountEntry.java  AccountSettings.java  Accounts.java  AdvancedEditor.java  AuthenticatorService.java  BackgroundSync.java  Birthdays.java  BookEntry.java  CardStore.java  ContactFieldDialogs.java  ContactForm.java  ContactPool.java  ContactWriter.java  ContactsList.java  DuplicateReview.java  EditSession.java  Entry.java  Group.java  LocalBook.java  MainActivity.java  Mapping.java  Oauth.java  OauthFlow.java  OfflineEngine.java  OfflinePhoneStore.java  OfflineStore.java  OnboardingFlow.java  PhoneRemote.java  Projector.java  SecureStore.java  SyncRunner.java  SyncService.java  SyncWorker.java  Ui.java  Vcf.java  VcfTransfer.java
android/app/src/main/java/org/pimalaya/cardamum/billing/: Billing.java
android/app/src/main/res/anim/: fade_zoom_in.xml  fade_zoom_out.xml  slide_in_left.xml  slide_in_right.xml  slide_in_up.xml  slide_out_down.xml  slide_out_left.xml  slide_out_right.xml  stay.xml
android/app/src/main/res/drawable/: button_pill.xml  divider.xml  fab_background.xml  ic_account.xml  ic_account_add.xml  ic_add.xml  ic_add_circle.xml  ic_add_entry.xml  ic_addressbooks.xml  ic_advanced.xml  ic_anniversary.xml  ic_archive_x.xml  ic_arrow_back.xml  ic_arrow_drop_down.xml  ic_arrow_forward.xml  ic_birthday.xml  ic_book.xml  ic_cancel.xml  ic_check.xml  ic_chevron_left.xml  ic_chevron_right.xml  ic_circle.xml  ic_close.xml  ic_cloud_sync.xml  ic_cloud_upload.xml  ic_company.xml  ic_contacts_empty.xml  ic_content_copy.xml  ic_database.xml  ic_database_upload.xml  ic_delete_bar.xml  ic_diverged.xml  ic_duplicates.xml  ic_edit.xml  ic_edit_arrow_down.xml  ic_export.xml  ic_filter_list.xml  ic_find_duplicates.xml  ic_folder_open.xml  ic_gender.xml  (+56 more)
android/app/src/main/res/layout/: activity_main.xml  dialog_sync.xml  dropdown_item.xml  item_contact.xml  menu_sync.xml  panel_account.xml  panel_advanced.xml  panel_auth.xml  panel_books.xml  panel_config.xml  panel_contact.xml  panel_contacts.xml  panel_email.xml  panel_home.xml  panel_password.xml  panel_settings.xml  panel_source.xml  panel_sync.xml  spinner_appbar_item.xml  spinner_form_item.xml
android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
android/app/src/main/res/values-en-rGB/: strings.xml
android/app/src/main/res/values-fr/: strings.xml
android/app/src/main/res/values-night/: colors.xml  themes.xml
android/app/src/main/res/xml/: authenticator.xml  contacts.xml  syncadapter.xml
android/app/src/test/java/org/pimalaya/cardamum/: CardStoreTest.java  MappingTest.java  OfflineEngineServeTest.java  TypeTablesTest.java  VcfTest.java
android/client/: build.gradle.kts  consumer-rules.pro
android/client/src/main/: AndroidManifest.xml
android/client/src/main/java/org/pimalaya/cardamum/client/: Account.java  Addressbook.java  AuthMethod.java  Card.java  CardDelta.java  CardamumClient.java  CardamumException.java  Cards.java  Native.java  OauthSession.java  OauthTokens.java  OfflineDriver.java  Provider.java  ServerMetadata.java  ServiceConfig.java  Transport.java
android/client/src/test/java/org/pimalaya/cardamum/client/: CardamumClientTest.java
docs/: README.md  addressbook-management.md  android-15-migration.md  conflict-resolution-plan.md  contacts-mapping.md  custom-data.md  design.md  google-people.md  hub-decomposition-plan.md  io-offline-migration.md  jni-boundary.md  jni-typing-plan.md  merged-view.md  monetization.md  performance.md  phone-sync-plan.md  providers.md  refactor-plan.md  subscription-entitlement.md
rust/: Cargo.toml
rust/src/: account.rs  client.rs  ffi.rs  google.rs  jmap.rs  lib.rs  msgraph.rs  oauth.rs  offline.rs  project.rs  store.rs  types.rs
rust/src/client/: carddav.rs  convert.rs  discovery.rs  dispatch.rs  google.rs  graph.rs  jmap.rs
rust/src/ffi/: card.rs  discovery.rs  oauth.rs  offline.rs  project.rs
rust/src/project/: dedup.rs  form.rs  group.rs  merge.rs  props.rs
