[package]
name = "cardamum"
description = "JNI bridge driving Pimalaya I/O-free coroutines for the Cardamum Android client"
version = "0.1.0"
authors = ["soywod <pimalaya.org@posteo.net>"]
rust-version = "1.88"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
io-http = { version = "0.3", default-features = false }
io-jmap = { version = "0.2", default-features = false }
io-msgraph = { version = "0.2", default-features = false }
io-oauth = { version = "0.2", default-features = false }
io-offline = { version = "0.1", default-features = false }
io-people = { version = "0.2", default-features = false }
io-pim-discovery = { version = "0.3", default-features = false, features = ["autoconfig", "pacc", "rfc6764", "rfc8414", "rfc8620"] }
io-webdav = { version = "0.1", default-features = false }
jni = "0.22"
rand = "0.10"
secrecy = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.11", default-features = false }
url = { version = "2", default-features = false }
vcard-rs = { version = "0.1", default-features = false, features = ["parser", "jscontact"] }
